styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: 'Kumbh Sans', sans-serif;
    scroll-behavior: smooth;
  }


  .navbar {
    background: #303C6C;
    height: 80px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1.2rem;
    position: sticky;
    top: 0;
    z-index: 999;
    
}

.navbar__container {
  display: flex;
    justify-content: space-between;
    height: 80px;
    z-index: 1;
    width: 100%;
    max-width: 2000px;
    margin: 0 auto;
    padding: 0 50px;
    box-shadow: 0 2px 2px -2px rgba(0,0,0,.2)
}

#navbar__logo {
  background-color: #303C6C;
  background-image: linear-gradient(to top, #FFDAB9 0%, #303C6C 100%);
  background-size: 100%;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: white;
  -moz-text-fill-color: white;
  display: flex;
  align-items: center;
  cursor: pointer;
  text-decoration: none;
  font-size: 2rem;
}


.navbar__menu {
  display: flex;
  align-items: center;
  list-style: none;
  box-shadow: 0 2px 2px -2px rgba(0,0,0,.2)
}

.navbar__item {
  height: 80px;
}

.navbar__links {
  color: #fff;
  display: flex;
  align-items: center;
  justify-content: center;
  
  width: 125px;
  text-decoration: none;
  height: 100%;
  transition: all 0.3s ease;
  
}

.navbar__btn {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0 1rem;
  width: 100%;
}

.button {
  display: flex;
  justify-content: center;
  align-items: center;
  text-decoration: none;
  padding: 10px 20px;
  height: 100%;
  width: 100%;
  border: none;
  outline: none;
  border-radius: 4px;
  background: #303C6C;
  background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
  background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
  color: #fff;
  transition: all 0.3s ease;
}

.navbar__links:hover {
  color: #FFDAB9;
  transition: all 0.3s ease;
}

@media screen and (max-width: 960px) {
  .navbar__container {
    display: flex;
    justify-content: space-between;
    height: 80px;
    z-index: 1;
    width: 100%;
    max-width: 1300px;
    padding: 0;
  }

  .navbar__menu {
    display: grid;
    grid-template-columns: auto;
    margin: 0;
    width: 100%;
    position: absolute;
    top: -1000px;
    opacity: 1;
    transition: all 0.5s ease;
    z-index: -1;
  }

  .navbar__menu.active {
    background: whitesmoke;
    top: 100%;
    opacity: 1;
    transition: all 0.5s ease;
    z-index: 99;
    height: 60vh;
    font-size: 1.6rem;
  }

  #navbar__logo {
    padding-left: 25px;
  }

  .navbar__toggle .bar {
    width: 25px;
    height: 3px;
    margin: 5px auto;
    transition: all 0.3s ease-in-out;
    background: #131313;
  }

  .navbar__item {
    width: 100%;
  }

  .navbar__links {
    text-align: center;
    padding: 2rem;
    width: 100%;
    display: table;
  }

  .navbar__btn {
    padding-bottom: 2rem;
  }

  .button {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 80%;
    height: 80px;
    margin: 0;
  }

  #mobile-menu {
    position: absolute;
    top: 20%;
    right: 5%;
    transform: translate(5%, 20%);
  }

  .navbar__toggle .bar {
    display: block;
    cursor: pointer;
  }

  #mobile-menu.is-active .bar:nth-child(2) {
    opacity: 0;
  }

  #mobile-menu.is-active .bar:nth-child(1) {
    transform: translateY(8px) rotate(45deg);
  }

  #mobile-menu.is-active .bar:nth-child(3) {
    transform: translateY(-8px) rotate(-45deg);
  }
}
  
/* Hero Section */
.hero{
 
  background: #9c9595;
  background: linear-gradient(to right #161616, #000000);
  padding: 200px 0;
  display: flex;
  justify-content: center;
  /* position: relative; */
  background-image: url(https://i.ibb.co/NCNYD10/skyline.jpg) ;
  background-size: 100% 100%;

  background-blend-mode: hard-light;
}

.hero__container{
  display: grid;
  grid-template-columns: 1fr 1fr;
  column-gap: 1px ;
  align-items: center;
  justify-content: left;
  margin: 100px;
  height: 50vh;
  max-height: 1200px;
  z-index: 1;
  width: 100%;
  max-width: 2000px;
  padding: 0 20px;
  position: relative;
}

.hero__content{
  color: #fff;
  width: 100%;
 
}


.hero__heading{
  font-size: 50px;
  margin-bottom: 45px;
  color: #fff;
 
  
}
/* .pic{
 width: 100%;
 height: auto;
 z-index: 0;
} */



.hero__heading span{
  background: #EB5757;  
  background: -webkit-linear-gradient(to right, #000000, #EB5757);  
  background: linear-gradient(to right, #000000, #EB5757); 
  background-size: 100%;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -mo-text-fill-color: transparent;
  z-index: 999;
}

.hero__description{
  font-size: 21px;
  background: black;  
  background: -webkit-linear-gradient(to right, #000000, #BF211E);  
  background: linear-gradient(to right, #000000, #BF211E); 
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -mo-text-fill-color: transparent;
  z-index: 999;
  /* border: 10px solid #73AD21 ; */

}

.highlight{
  border-bottom: 4px solid rgb(132,0,255);
}

@media screen and(max-width: 768px){
  .hero__heading{
    font-size: 60px;

  }

  .hero__description{
    font-size: 20px;
  }
}

/* About Section */

.main{
  background-color: #FCFFF5;
  padding: 200px 0;
  height: 50%;
  display: table;
}

.main__container{
  height: 90%;
  z-index: 1;
  width: 100%;
  max-width: 2000px;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
  margin-right: -15px;
  margin-left: -15px;
  padding: 0 70px;
  margin: 5px 100px;
  align-items: center;
  justify-content: center;
}

.main__content{
  color: #4C4C6D;
  width:50%;
}
/* ... */

